# XCSoarAug

./: .gitattributes  .gitignore  AugXCSoar.md  BuildWithMinGW.cmd  CMakeLists.txt  CMakeLists0781.txt  CMakeSource.cmake  CMakeSource.md  CMakeSource.txt  CMakeSource1.cmake  CMakeXCSoar.cmd  CMakeXCSoar.py  CMakeXCSoar_Flaps5.cmd  CMakeXCSoar_Flaps5.py  CMakeXCSoar_Flaps5_MinGW.cmd  CMakeXCSoar_PC0781.cmd  CopyCMakeList.cmd  InstallOnLinux.md  MSVC-Compile.txt  Merge-Differenzen.txt  OGN-Device-List.txt  Start-CMake-XCSoar.cmd  Start-CMake-XCSoar.py  StartMinGW.cmd  UnixCompileList.txt  VERSION.txt  XCSoar-CMake.pyproj  XCSoar-CMake.sln  XCSoar-MSVC-Changes.docx  XCSoar.md  XCSoarDummy.cpp  _GitMergeUpstream.txt  _XCSoarWin.sh  install_cmake.sh
src/: ActionInterface.cpp  CMakeLists.txt  CMakeSource.cmake  CMakeSource.txt  CalculationThread.cpp  CommandLine.cpp  DisplaySettings.cpp  Interface.hpp  LocalPath.cpp  MainWindow.hpp  ResourceLoader.cpp  Resources.hpp  SourceDirs.md  Startup.cpp  StatusMessage.cpp  UtilsSystem.cpp  VALI-XCS.cpp  Version.cpp  Version.hpp  XCSoar.cpp  lua.h
src/Airspace/: CMakeLists.txt  CMakeSource.cmake  CMakeSource.txt  NearestAirspace.cpp  ProtectedAirspaceWarningManager.cpp  ProtectedAirspaceWarningManager.hpp
src/Atmosphere/: CMakeLists.txt  CMakeSource.cmake  Pressure.cpp
src/Audio/: CMakeSource.cmake  Sound.cpp
src/Blackboard/: CMakeSource.cmake
src/Cloud/: FileToWeGlide.cpp  FileToWeGlide.hpp  IGCFileUpload.cpp  IGCFileUpload.hpp
src/Compatibility/: gdi.h
src/Computer/: BasicComputer.cpp  CMakeLists.txt  CMakeSource.cmake  Settings.hpp
src/Config/: Registry.hpp
src/CrossSection/: CMakeSource.cmake  CrossSectionRenderer.cpp  TerrainXSRenderer.cpp
src/Device/: CMakeLists.txt  CMakeSource.cmake  Config.cpp  Descriptor.cpp  Driver.hpp  Features.hpp
src/Dialogs/: CMakeLists.txt  CMakeSource.cmake  CMakeSource.txt  Error.cpp  Message.hpp  Old-CMakeSource.txt  ProfileListDialog.hpp  ProfilePasswordDialog.cpp  ProfilePasswordDialog.hpp  StartupDialog.cpp  StartupDialog.hpp  dlgCredits.cpp
src/Engine/: CMakeLists.txt  CMakeSource.cmake
src/Event/: CMakeLists.txt  CMakeSource.cmake  Notify.cpp
src/FLARM/: CMakeLists.txt  CMakeSource.cmake  List.hpp  Traffic.hpp
src/Form/: CMakeLists.txt  CMakeSource.cmake  Form.cpp  Form.hpp
src/Formatter/: CMakeSource.cmake
src/Gauge/: CMakeSource.cmake  FlarmTrafficWindow.cpp  FlarmTrafficWindow.hpp  GaugeVario.cpp  ThermalAssistantRenderer.cpp  ThermalAssistantRenderer.hpp
src/Geo/: CMakeLists.txt  CMakeSource.cmake  CMakeSource.txt
src/Hardware/: CMakeSource.cmake  DisplayDPI.cpp  DisplaySize.cpp  RotateDisplay.cpp
src/IGC/: CMakeLists.txt  CMakeSource.cmake  CMakeSource.txt
src/IO/: BufferedOutputStream.cxx  CMakeLists.txt  CMakeSource.cmake  CSVLine.cpp  ConvertLineReader.cpp  FileCache.cpp  FileOutputStream.hxx  FileReader.hxx  FileTransaction.hpp  KeyValueFileWriter.cpp  TextWriter.cpp  TextWriter.hpp
src/InfoBoxes/: CMakeLists.txt  CMakeSource.cmake  InfoBoxLayout.cpp
src/Input/: CMakeLists.txt  CMakeSource.cmake  InputDefaults.cpp  InputEvents.hpp  InputEventsActions.cpp  InputEventsMap.cpp
src/Job/: CMakeLists.txt  CMakeSource.cmake
src/Language/: CMakeLists.txt  CMakeSource.cmake  Language.cpp  LanguageGlue.cpp  MOFile.cpp
src/Logger/: CMakeLists.txt  CMakeSource.cmake  ExternalLogger.cpp  Settings.hpp
src/Look/: AirspaceLook.cpp  AutoFont.hpp  CMakeLists.txt  CMakeSource.cmake  FlarmTrafficLook.cpp  FlarmTrafficLook.hpp  FontDescription.cpp  GlobalFonts.cpp  MapLook.cpp  ThermalAssistantLook.cpp  ThermalAssistantLook.hpp
src/Lua/: CMakeLists.txt  CMakeSource.cmake
src/MapWindow/: CMakeLists.txt  CMakeSource.cmake  GlueMapWindowDisplayMode.cpp  MapCanvas.cpp  MapWindowGlideRange.cpp  MapWindowTask.cpp  StencilMapCanvas.cpp
src/Math/: Angle.cpp  CMakeLists.txt  CMakeSource.cmake  Trig.hpp
src/Menu/: CMakeLists.txt  CMakeSource.cmake
src/Monitor/: CMakeLists.txt  CMakeSource.cmake
src/NMEA/: Aircraft.cpp  CMakeLists.txt  CMakeSource.cmake
src/Net/: CMakeLists.txt  CMakeSource.cmake
src/OS/: Args.hpp  CMakeLists.txt  CMakeSource.cmake  Clock.cpp  DynamicLibrary.hpp  Error.hxx  FileDescriptor.hxx  FileMapping.cpp  FileMapping.hpp  FileUtil.cpp  FileUtil.hpp  LogError.cpp  OverlappedEvent.hpp  Process.cpp  Sleep.h  SystemLoad.cpp
src/Operation/: CMakeSource.cmake  MessageOperationEnvironment.cpp  Operation.hpp
src/Plane/: CMakeLists.txt  CMakeSource.cmake  Plane.hpp  PlaneFileGlue.cpp
src/Polar/: CMakeSource.cmake
src/Profile/: CMakeSource.cmake  ComputerProfile.cpp  ProfileKeys.cpp  ProfileKeys.hpp  StringValue.cpp  TrackingProfile.cpp
src/Projection/: CMakeSource.cmake  Projection.cpp
src/Renderer/: AirspaceLabelList.hpp  AirspacePreviewRenderer.cpp  CMakeLists.txt  CMakeSource.cmake  ChartRenderer.cpp  FAITriangleAreaRenderer.cpp  HorizonRenderer.cpp  OZRenderer.cpp  TaskLegRenderer.cpp  TaskPointRenderer.cpp  WaypointLabelList.hpp  WindArrowRenderer.cpp
src/Replay/: CMakeLists.txt  CMakeSource.cmake
src/Repository/: CMakeSource.cmake
src/Screen/: Bitmap.hpp  Brush.hpp  BufferCanvas.hpp  Busy.hpp  CMakeLists.txt  CMakeSource.cmake  Color.hpp  Font.hpp  Point.hpp  StopWatch.hpp  Timer.hpp  Window.hpp
src/Task/: CMakeSource.cmake  MapTaskManager.cpp  ProtectedRoutePlanner.hpp  ProtectedTaskManager.hpp  TaskFileIGC.cpp  TaskFileSeeYou.cpp
src/TeamCode/: CMakeSource.cmake  TeamCode.cpp
src/Terrain/: CMakeLists.txt  CMakeSource.cmake  Loader.cpp  Loader.hpp  RasterProjection.cpp  RasterTile.cpp  RasterTile.hpp  RasterTileCache.cpp  RasterTileCache.hpp  WorldFile.cpp  ZzipStream.cpp  jpc_rtc.cpp
src/Thread/: CMakeSource.cmake  CriticalSection.hxx  Debug.cpp  Debug.hpp  Handle.hpp  Mutex.hxx  SharedMutex.hpp  Thread.hpp  Trigger.hpp  Util.hpp  WindowsSharedMutex.hxx
src/Time/: BrokenDateTime.cpp  CMakeSource.cmake
src/Topography/: CMakeSource.cmake  ShapeRenderer.hpp
src/Tracking/: CMakeLists.txt  CMakeSource.cmake  Features.hpp
src/UIUtil/: CMakeLists.txt  CMakeSource.cmake
src/Units/: CMakeSource.cmake  UnitsGlue.cpp
(+132 files in other folders)
